# tibava

./: .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.bentoml.yml  docker-compose.cuda.yml  docker-compose.yml  pyproject.toml
analyser/: .dockerignore  .gitignore  README.md  apptainer.def  config.yml  pyproject.toml
analyser/src/analyser/: client.py  server.py
backend/: .gitignore  Dockerfile  pyproject.toml
backend/src/backend/: README.md  __main__.py  backend_config.toml  config.json  manage.py  requirements.txt
backend/src/backend/backend/: apps.py  exceptions.py  managers.py  models.py  plugin_manager.py  urls.py
backend/src/backend/backend/management/commands/: run_plugins.py  stat_usage.py  update_data.py  user_add.py  user_change_limits.py  user_copy.py  user_migrate.py  video_add.py  video_convert_folder_struct.py  video_copy.py  video_export.py
backend/src/backend/backend/migrations/: 0001_initial.py  0002_auto_20230629_1351.py  0003_auto_20230718_1222.py  0004_clustertimelineitem.py  0005_clustertimelineitem_video.py  0006_auto_20230803_1142.py  0007_face.py  0008_face_image_path.py  0009_clustertimelineitem_plugin_run.py  0010_auto_20230823_0856.py  0011_auto_20231204_2019.py  0012_auto_20240122_1541.py  0013_auto_20240122_1549.py  0014_auto_20240122_2009.py  0015_auto_20240208_0958.py  0016_auto_20240212_1359.py  0017_auto_20240215_0910.py  0018_auto_20240213_0903_squashed_0020_auto_20240216_1213.py  0019_timeline_colormap_inverse.py  0020_remove_clusteritem_plugin_item_ref.py  0021_videoanalysisstate.py  0022_auto_20240507_0815.py  0023_alter_pluginrunresult_type_alter_tibavauser_id_and_more.py  0023_video_terms_accepted_alter_video_file.py  0024_tibavauser_max_plugin_runs_and_more.py
backend/src/backend/backend/tasks/: __init__.py  active_speaker_detection.py  aggregate_scalar.py  audio_amp.py  audio_classification.py  audio_emotion.py  audio_freq.py  audio_gender.py  audio_rms.py  blip_vqa.py  clip.py  clip_ontology.py  cluster_to_scalar.py  color_analysis.py  color_brightness_analysis.py  deepface_emotion.py  face_clustering.py  insightface_facesize.py  insightface_identification.py  invert_scalar.py  movie_pattern_frameshare.py  movie_pattern_intensify.py  movie_pattern_opposition.py  movie_pattern_shot_reverse_shot.py  nano_ocr.py  ocr.py  place_clustering.py  place_identification.py  places_classification.py  shot_angle.py  shot_density.py  shot_level.py  shot_scalar_annotation.py  shot_scale_and_movement.py  shot_type_classification.py  shotdetection.py  text_ner.py  text_pos.py  text_sentiment.py  thumbnail.py  (+3 more)
backend/src/backend/backend/utils/: __init__.py  analyser_client.py  archive.py  color.py  communication.py  dicts.py  image.py  parser.py  task.py  upload.py  urls.py
backend/src/backend/backend/views/: __init__.py  analyser_api.py  annotation.py  annotation_category.py  annotation_shortcut.py  cluster_item.py  cluster_timeline_item.py  plugin.py  plugin_run.py  plugin_run_result.py  shortcut.py  timeline.py  timeline_import.py  timeline_segment.py  timeline_segment_annotation.py  user.py  video.py  video_analysis_state.py  video_export.py
backend/src/backend/tibava/: celery.py  settings.py  urls.py  wsgi.py
docs/: index.html
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  app.config.js  default.conf  docker-compose.yml  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.vue  main.js
frontend/src/assets/: arial.fnt  arial_0.tga  arial_1.tga  arial_2.tga
frontend/src/components/: AnnotationForm.vue  AnnotationMenu.vue  ClusterExploration.vue  ClusterItemCard.vue  ClusterTimelineItemOverview.vue  CurrentEntitiesOverView.vue  History.vue  ModalCopyTimeline.vue  ModalCreateTimeline.vue  ModalDeleteTimeline.vue  ModalError.vue  ModalExport.vue  ModalExportResult.vue  ModalImportTimeline.vue  ModalPlugin.vue  ModalRenameTimeline.vue  ModalShortcut.vue  ModalTerms.vue  ModalTimelineSegmentAnnotate.vue  ModalVideoRename.vue  ModalVideoUpload.vue  ModalVisualizationTimeline.vue  (+20 more)
inference_ray/: Dockerfile  Dockerfile.cuda  apptainer.def  deploy.cuda.yml  deploy.yml  pyproject.toml  requirements.txt
inference_ray/src/inference_ray/: main.py  plugin.py
inference_ray/src/inference_ray/plugins/: active_speaker_detection.py  aggregate_scalar.py  aggregate_scalar_per_time.py  audio_amp.py  audio_classification.py  audio_emotion.py  audio_freq.py  audio_gender.py  audio_rms.py  blip_embedding.py  clip_embedding.py  cluster_size_filter.py  clustering.py  color_analyser.py  color_brightness.py  cosine_similarity.py  dbscan.py  deepface_emotion.py  face_size_filter.py  face_tracking.py  insightface_detector.py  insightface_facesize.py  insightface_facialfeatures.py  insightface_genderage.py  invert_scalar.py  min_max_norm.py  movie_pattern_frameshare.py  movie_pattern_intensify.py  movie_pattern_opposition.py  movie_pattern_shot_reverse_shot.py  ocr.py  ocr_nano.py  place_clustering.py  places_classification.py  scalar_threshold.py  shot_angle.py  shot_annotation.py  shot_density.py  shot_level.py  shot_scalar_annotation.py  (+13 more)
(+43 files in other folders)
