[project]
name = "TIB-AV-A"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mava",
    "packaging>=24.2",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
]

[tool.uv.workspace]
members = ["packages/*", "analyser", "backend", "inference_ray"]

[tool.uv.sources]
mava = { git = "https://github.com/sdsc-ordes/mava-api.git" }
