[project]
name = "analyser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "interface",
    "inference_ray",
    "utils",
    "data",
    "grpcio>=1.70.0",
    "imageio>=2.37.0",
    "msgpack>=1.1.0",
    "packaging>=24.2",
    "protobuf>=5.29.3",
    "ray[serve]==2.42.0",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
    "valkey>=6.1.0",
]

[tool.uv]
package = true

[tool.uv.sources]
interface = { workspace = true }
data = { workspace = true }
inference_ray = { workspace = true }
utils = { workspace = true }
